# grampc_julia_wrapper

./: CMakeLists.txt  README.md
CMakeModules/: FindJulia.cmake
inc_wrapper/: grampcjl_error_handling.h  grampcjl_problem_functions.h  grampcjl_wrapper.h
src_GRAMPC/: Makefile
src_GRAMPC/include/: grampc_init.h  grampc_mess.h
src_GRAMPC/matlab/mfiles/: grampc_make_toolbox.m
src_GRAMPC/src/: grampc_alloc.c
src_wrapper/: grampcjl_error_handling.c  grampcjl_problem_functions.c  grampcjl_wrapper.c
